[project]
name = "webseekly"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.0", # Web framework to build the service
    "requests>=2.31.0", # For making HTTP requests
    "beautifulsoup4>=4.12.0", # For parsing event information from websites
    "openai>=1.35.13", # Integration with OpenAI APIs if needed
    "pandas>=1.5.3", # Data manipulation and storage
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.36",
    "fastapi>=0.115.5",
    "pytest>=8.3.3",
    "uvicorn>=0.32.0",
    "langgraph>=0.2.56",
]

[tool.uv]
dev-dependencies = [
    "bump2version>=1.0.1",  # For managing version numbers
    "ipykernel>=6.29.5",  # To support Jupyter notebooks
    "jupyter>=1.1.1",  # Jupyter notebooks for exploratory work
    "pre-commit>=3.8.0",  # For git hooks to ensure code quality
    "ruff>=0.6.7",  # Linting for maintaining code quality
    "pytest>=7.2.0",  # For running tests
]

[tool.ruff]
ignore = ["E731", "F841", "F821", "E741"]  # Custom linting rules to ignore certain checks

[tool.setuptools.packages.find]
where = ["src"]
include = ["webseekly"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
